[package]
name = "amiitool-rs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = {version = "0.12.1", features = ["reset"] }
sha2 = "0.10.2"
aes-gcm = { version = "0.9.4", features = ["alloc"] }
aead = "0.4.3"
crypto-common = "0.1.3"
digest = "0.10.3"
generic-array = "0.14.5"
typenum = "1.15.0"
ctr = { version = "0.9.1", features = ["std"] }
aes = { version = "0.8.1"}
rand = "0.8.4" 
